tests/sumo/spec/departure/errors/edge_disallowed_ignore/errors.sumo.meso
Warning: Vehicle '1' is not allowed to depart on any lane of its first edge.
